@@ -81,6 +81,9 @@ Core
 
 Library
 
+- Asynchronous timeout actions are available through the new class
+  threading.Timer.
+
 - math.log and math.log10 now return sensible results for even huge
   long arguments.  For example, math.log10(10 ** 10000) ~= 10000.0.
 
